completed some final tweeks, and fixed the page from being too wide.

--- a/styles/home.css
+++ b/styles/home.css
@@ -9,7 +9,9 @@ body {
     font-family: "Raleway", sans-serif;
     font-weight: 400;
     font-style: normal;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     color: black;
     background-color: var(--accent-colour2);
 }
@@ -74,7 +76,7 @@ h1 {
     position: static;
     top: 50px;
     left: 0;
-    width: 100vw;
+    width: 100%;
     max-height: 0;
 }
 
@@ -198,12 +200,13 @@ h2 {
 
 /*FOOTER*/
 footer {
-    grid-column: 1 / 4;
+    width: 100%;
     text-align: center;
     background-color: var(--main-colour);
     color: var(--accent-colour1);
     font-weight: 600;
     padding: 1px;
+    width: 100%;
 }
 
 .socials {
